style.css
html {
    background-color: #eceae1;
    padding: 0px;
    margin: 0px;
    height: 100%
}

@font-face {
    font-family: Calinor;
    src: url(CALINORPEGASUS.ttf);
}


body {
    font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    padding: 0px;
    margin: 0px;
    width: 100%;
}

header {
    
}

#title {
    display: flex;
    flex-direction: column;

}

#library_title {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    align-self: center;
    justify-self: center;
    padding: 0px;
    margin: 0px 0px 0px;
    font-family: Calinor;
    font-weight: 400;
    font-size: 240px;
    font-style: normal;
    color: black;
  }

.add_button {
    display: grid;
    align-items: center;
    align-self: center;
    justify-content: center;
    justify-self: center;
    margin: -52px 0px 16px 0px;
    color: black;
    border: solid 2px black;
    background-color: WHITE;
    border-radius: 12px;
    height: 40px;
    width: 148px;
    font-size: 1.4em;


    font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

.add_button:hover {
    opacity: 0.9;
    cursor: pointer;
}

#librarybody {
    display: flex;
    grid-auto-flow: row;
    justify-content: center;
    align-items: center;
    align-self: center;
    justify-self: center;
    background-color: #a6afdd;
    width: 100%;
    height: 100%;
}


.dialog {
    width: 50%;
    max-width: 280px;
    border-radius: 5px;
    border: solid 2px black;
    outline: none;
    overflow: hidden;
    color: black;
    height: 380px;
    -webkit-transition: opacity 400ms ease-in;
    -moz-transition: opacity 400ms ease-in;
    transition: opacity 400ms ease-in;
}

#unblurred {
    height: 100%;
    width: 100%;
    position: relative;
    backdrop-filter: blur(20px);
    position: fixed;
    top: 0;
    left: 0;
}


.dialog_header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    font-weight: 600;
    font-size: 1.2em;
    margin: 1.6em 1.25em;
}

.cancel_button:hover  {
    opacity: 0.9;
    cursor: pointer;
}

.cancel_button {
    color: black;
    border: solid 1px black;
    background-color: #a6afdd;
    border-radius: 8px;
    height: 20px;
    width: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.dialog_content {
    display: flex;
    flex-direction: column;
    margin: 1.25em;
}

label {
    margin-right: 12px;
}

.dialog_input {
    display: flex;
    align-items: center;
    margin-bottom: 16px;
    border-radius: 8px;
    font-size: 1.2em;
}

input {
    border: solid 1px black;
    border-radius: 4px;
    padding: 8px 8px;
    background-color:#e5e7db;
    width: 100%;

    font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-size: .8em;
}

input::placeholder {
    color: black;
}

/* Remove number input spinner (for WebKit browsers) */
input[type=number] {
    -moz-appearance: textfield; /* Firefox */
  }
  
  input[type=number]::-webkit-outer-spin-button,
  input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0; /* Optional - if you want to remove the gap where the buttons were */
  }

.dialog_submit {
    display: flex;
    justify-content: center;
    margin-bottom: 1.25em;
}

.submit_button {
    color: black;
    border: solid 1px black;
    background-color: #a6afdd;
    border-radius: 8px;
    font-size: 1.05em;
    height: 32px;
    width: 96px;

    font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

.submit_button:hover {
    opacity: 0.9;
    cursor: pointer;
}

#read {
    width: 40px;
}

input[type="checkbox"] {
    border: 3px solid black;
    height: 16px;
}

#readcheck {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#catalog {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 28px;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    padding: 48px 68px;
    width: 100%;
    height: 100%;
}

.book_card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border: solid black;
    border-radius: 8px;
    min-width: 280px;
    min-height: 300px;
    height: 100%;
    width: 100%;
    max-width: 360px;
    box-sizing: border-box;
    margin: auto;
    box-shadow: 0 4px 8px 0 rgba(179, 177, 177, 0.2), 0 6px 12px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
    padding: 24px;
}

.book_info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 12px 12px 0px 12px;
    font-size: 1.2em;
    font-weight: 400;

}

#read_toggle {  
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    cursor: pointer;
    height: 32px;
    color: white;
}

.remove_button {
    display: flex;
    justify-self: center;
    align-items: center;
    justify-content: center;
    margin: 12px;
    font-size: 1.1em;
    width: 100%;
    cursor: pointer;
    border: none;
    height: 32px;

    font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  color: black;
    
}

@media only screen and (max-width: 1000px) {

    #catalog {
        grid-template-columns: 1fr 1fr;
    }

    #library_title {
        /* margin: -32px 0px; */
        font-size: 160px;
    }

    .add_button {
        margin: -24px 0px 16px 0px;
    }

    }
    @media only screen and (max-width: 620px) {

        #catalog {
            grid-template-columns: 1fr;
        }
    
        #library_title {
            /* margin: -32px 0px; */
            font-size: 88px;
        }
    
        .add_button {
            margin: -12px 0px 16px 0px;
        }

        .dialog_input {
            margin-bottom: 8px;
        }

        .add_button {
            font-size: 1.2em;
        }
    
        }
    
        @media only screen and (max-width: 432px) {

            #catalog {
                grid-template-columns: 1fr;
            }
        
            #library_title {
                /* margin: -32px 0px; */
                font-size: 72px;
            }
        
            .add_button {
                margin: -12px 0px 16px 0px;
            }
    
            .dialog_input {
                margin-bottom: 8px;
            }
    
            .add_button {
                font-size: 1.1em;
            }
        
            }

